# zorvyn_assigment

./: .gitignore  README.md  docker-compose.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/04-dashboard-analytics/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  alembic.ini  build.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260402_add_audit_fields.py  4e8bd9f0467a_initial.py  aa51d7ac6fab_add_refresh_tokens_table.py
backend/app/: __init__.py  main.py
backend/app/auth/: __init__.py  deps.py  router.py  schemas.py  service.py
backend/app/core/: config.py  security.py
backend/app/dashboard/: __init__.py  aggregations.py
backend/app/db/: __init__.py  base.py  session.py  utils.py
backend/app/models/: __init__.py  refresh_token.py  transaction.py  user.py
backend/app/routers/: __init__.py  dashboard.py  transactions.py  users.py
backend/app/schemas/: __init__.py  transaction.py  user.py
backend/app/services/: transaction.py  user.py
backend/tests/: conftest.py  test_api.py
backend/tests/unit/: test_config.py  test_schemas.py  test_security.py
